# camera-map-localization

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/benchmark/: CMakeLists.txt  main.cpp
apps/eval_perception_compare/: CMakeLists.txt  main.cpp
apps/eval_sequence/: CMakeLists.txt  main.cpp
apps/preprocess_kitti/: CMakeLists.txt  main.cpp
apps/run_sequence/: CMakeLists.txt  main.cpp
apps/viz_frame/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  BENCHMARK.md  BUILD.md  IMPLEMENTATION_PHASES.md  KITTI_DATA.md  KITTI_RUN.md  OPEN_ITEMS.md  README.md  TESTING.md  VISUALIZATION.md
include/cam_loc/benchmark/: benchmark.hpp  micro_benchmarks.hpp
include/cam_loc/core/: bev_config.hpp  cost_aggregator.hpp  cost_grid.hpp  distance_transform_cpu.hpp  localization_debug.hpp  localization_engine.hpp  localization_kf.hpp  pose_sampler.hpp  projection.hpp  sampling_covariance.hpp
include/cam_loc/cuda/: distance_transform.hpp
include/cam_loc/kitti/: calib_parser.hpp  eval_metrics.hpp  sequence_eval.hpp  sequence_eval_runner.hpp  types.hpp
include/cam_loc/map/: map_georef.hpp  map_loader.hpp  map_loader_util.hpp  osm_map_loader.hpp  osm_xml_parser.hpp  polyline_map.hpp  trajectory_corridor_map.hpp
include/cam_loc/perception/: adapter.hpp  noise.hpp  resolve.hpp  synthesize.hpp
include/cam_loc/semantic_kitti/: lidar_project.hpp  preprocess.hpp
include/cam_loc/types/: params.hpp  status.hpp  status_codes.hpp
include/cam_loc/viz/: frame_viz.hpp
ros/: README.md
ros/cam_loc_ros/: CMakeLists.txt  package.xml
ros/cam_loc_ros/include/cam_loc_ros/: keyboard_input.hpp  markers.hpp
ros/cam_loc_ros/launch/: cam_loc_viz.launch.py
ros/cam_loc_ros/rviz/: cam_loc.rviz
ros/cam_loc_ros/src/: keyboard_input.cpp  loc_viz_node.cpp  markers.cpp
scripts/: README.md  build_ros.sh  ci.sh  download_kitti_odometry.sh  download_semantic_kitti_labels.sh  lib.sh  prepare_smoke_kitti.sh  run_benchmark.sh  run_perception_eval.sh  run_perception_tuning.sh  run_real_kitti.sh  run_ros_viz.sh  run_smoke.sh  run_viz_smoke.sh
src/: CMakeLists.txt
src/benchmark/: benchmark_runner.cpp  micro_benchmarks.cpp
src/core/: cost_aggregator.cpp  cost_grid.cpp  distance_transform_cpu.cpp  localization_engine.cpp  localization_kf.cpp  math.cpp  pose_sampler.cpp  projection.cpp  sampling_covariance.cpp
src/cuda/: CMakeLists.txt  distance_transform_gpu.cpp  distance_transform_kernels.cu  distance_transform_kernels.cuh  distance_transform_stub.cpp
src/kitti/: calib_parser.cpp  perception_loader.cpp  sequence_eval.cpp  sequence_eval_runner.cpp  types.cpp
src/map/: map_georef.cpp  map_loader_util.cpp  osm_map_loader.cpp  osm_xml_parser.cpp  polyline_map.cpp  trajectory_corridor_map.cpp
src/perception/: adapter.cpp  noise.cpp  resolve.cpp  synthesize.cpp
src/semantic_kitti/: lidar_project.cpp  preprocess.cpp
src/viz/: frame_viz.cpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_calib_parser.cpp  test_corridor_map.cpp  test_cuda.cpp  test_distance_transform.cpp  test_localization_engine.cpp  test_math.cpp  test_osm_map.cpp  test_perception_eval.cpp  test_perception_json.cpp  test_pose_reader.cpp  test_pose_sampler.cpp  test_semantic_kitti.cpp  test_semantic_lidar.cpp  test_viz.cpp
tests/data/: calib_minimal.txt  map_georef.json  map_minimal.json  map_minimal.osm  perception_minimal.json  poses_minimal.txt
